<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="200dp"
                                             android:background="@color/black"
                                             android:id="@+id/horror_movie_list_item">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/action_movie_cardview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/black"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:id="@+id/horror_movie_imageview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/title_tv_horror"
                    android:text="@string/movie_title_tv_text"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="200dp"
                    android:layout_marginStart="200dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/time_tv_horror"
                    android:text="@string/movie_runtime_tv_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="200dp"
                    android:layout_marginStart="200dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="48dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/year_tv_horror"
                    android:text="@string/movie_year_tv_text"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="200dp"
                    android:layout_marginStart="200dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/rate_tv_horror"
                    android:text="8.5/10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="200dp"
                    android:layout_marginStart="200dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="112dp"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>