<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".Fragment.HomeFragment"
             android:id="@+id/fragment_home">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_navigation_drawer"
            tools:context=".Activitys.NavigationDrawerActivity"
            android:id="@+id/home_activity">

    <ScrollView
            android:id="@+id/movie_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/movie_category_container_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/movie_carousel_container_layout"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:orientation="vertical"
                    android:background="@color/black">

                <android.support.v7.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card_view"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                    <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/black">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="At the moment"
                                card_view:layout_constraintTop_toTopOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_marginBottom="15dp"
                                android:layout_marginLeft="16dp"
                                android:textColor="@color/white"
                                android:id="@+id/at_the_moment_tv"/>

                        <ImageView
                                android:layout_width="170dp"
                                android:layout_height="240dp"
                                android:id="@+id/imageViewAtThMoment"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                card_view:layout_constraintTop_toBottomOf="@+id/at_the_moment_tv"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_title_tv_text"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="200dp"
                                android:layout_marginStart="200dp"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:textColor="@color/white"
                                android:layout_marginTop="60dp"
                                android:id="@+id/at_the_moment_title"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_runtime_tv_text"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="200dp"
                                android:layout_marginStart="200dp"
                                android:textColor="@color/white"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="100dp"
                                android:id="@+id/at_the_moment_runtime"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_released_tv_text"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="200dp"
                                android:layout_marginStart="200dp"
                                android:textColor="@color/white"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:id="@+id/at_the_released"
                                android:layout_marginTop="140dp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_genre_tv_text"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:id="@+id/at_the_moment_genre"
                                android:layout_marginLeft="200dp"
                                android:layout_marginStart="200dp"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:textColor="@color/white"
                                android:layout_marginTop="180dp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/movie_year_tv_text"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:id="@+id/at_the_moment_year"
                                android:layout_marginLeft="200dp"
                                android:layout_marginStart="200dp"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:textColor="@color/white"
                                android:layout_marginTop="220dp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Description"
                                android:id="@+id/at_the_moment_description"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                card_view:layout_constraintTop_toTopOf="parent"
                                android:textColor="@color/white"
                                android:layout_marginTop="310dp"
                                android:textStyle="bold"/>

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/white"
                        android:text="Recommended"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <LinearLayout
                        android:id="@+id/movie_recommended_container_layout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:orientation="horizontal"
                        android:background="@color/black">


                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/recommended_movie_rc"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/white"
                        android:text="New"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                <LinearLayout
                        android:id="@+id/new_movie_container_layout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:orientation="horizontal"
                        android:background="@color/black">

                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/new_movie_rc"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>